objects/advpm__Matter_Legal_Hold_Acknowledgement__c.object
<CustomObject>
    <fields>
        <fullName>Box_Assignment_Id__c</fullName>
        <label>Box_Assignment_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Acknowledged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is system used field, and is populated automatically when Legal Hold is Acknowledged.</inlineHelpText>
        <label>Acknowledged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matter_Legal_Hold_Acknowledgements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Acknowledged_On__c</fullName>
        <inlineHelpText>This is system used field, and is populated automatically when Legal Hold is Acknowledged.</inlineHelpText>
        <label>Acknowledged On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Legal Hold Acknowledgements</relationshipLabel>
        <relationshipName>Matter_Legal_Hold_Acknowledgements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Recipient_Email__c</fullName>
        <formula>advpm__Recipient__r.Email</formula>
        <label>Recipient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Matter_Legal_Hold_Acknowledgements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Matter Legal Hold Acknowledgement</label>
    <nameField>
        <displayFormat>LH-ACK-{000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Legal Hold Acknowledgements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>